package com.fos.workspace.document.domain;

public enum DocumentCategory {
    GENERAL,
    MEDICAL,
    ADMIN,
    REPORT,
    CONTRACT
}
